Connect to mysql db

--- a/Pages/ProductCategory/Index.cshtml
+++ b/Pages/ProductCategory/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<web_api.Models.ProductCategory>
+﻿@page
+@model IEnumerable<web_api.Models.ProductCategory>
 
 @{
     ViewData["Title"] = "Index";
