--- a/Pages/ProductCategory/add.cshtml
+++ b/Pages/ProductCategory/add.cshtml
@@ -14,7 +14,11 @@
 </head>
 <body>
 
-<h4>Product Category</h4>
+<div>
+    <a asp-page="ProductCategory/add">Create New Product Category</a>
+</div>
+
+<h3>List Product Category</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -38,7 +42,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="ProductCategory/index">Back to List</a>
 </div>
 
 @section Scripts {
