stylesheet files for styling

--- a/Pages/ProductCategory/Index.cshtml
+++ b/Pages/ProductCategory/Index.cshtml
@@ -12,6 +12,11 @@
     <meta name="viewport" content="width=device-width" />
     <title>index</title>
 </head>
+
+<environment include="Development">
+    <link rel="stylesheet" href="~/lib/bootstrap.min.css" />
+</environment>
+
 <body>
 <p>
     <a asp-page="Create">Create New</a>
