--- a/Pages/ProductCategory/delete.cshtml
+++ b/Pages/ProductCategory/delete.cshtml
@@ -12,6 +12,11 @@
     <meta name="viewport" content="width=device-width" />
     <title>delete</title>
 </head>
+
+<environment include="Development">
+    <link rel="stylesheet" href="~/lib/bootstrap.min.css" />
+</environment>
+
 <body>
 
 <h3>Are you sure you want to delete this?</h3>
