--- a/Pages/ProductCategory/update.cshtml
+++ b/Pages/ProductCategory/update.cshtml
@@ -12,6 +12,11 @@
     <meta name="viewport" content="width=device-width" />
     <title>update</title>
 </head>
+
+<environment include="Development">
+    <link rel="stylesheet" href="~/lib/bootstrap.min.css" />
+</environment>
+
 <body>
 
 <h4>ProductCategory</h4>
