--- a/Pages/ProductCategory/add.cshtml
+++ b/Pages/ProductCategory/add.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model web_api.Pages.ProductCategory.addModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
     Layout = null;
@@ -17,15 +18,16 @@
     <link rel="stylesheet" href="~/lib/bootstrap.min.css" />
 </environment>
 
-<body>
+<body style="margin: 0 auto; width:90%">
 
 <div>
-    <a asp-page="ProductCategory/add">Create New Product Category</a>
+    <br />
 </div>
 
-<h3>List Product Category</h3>
+<h4 style="text-decoration:underline;">Create Product Category</h4>
+<a style="float:right; margin-right:25px;" asp-page="ProductCategory/index">Back to List</a>
 <hr />
-<div class="row">
+<div class="row" style="margin: 0 auto; width:80%">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -44,10 +46,6 @@
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-page="ProductCategory/index">Back to List</a>
 </div>
 
 @section Scripts {
