product category module updated

--- a/Pages/ProductCategory/add.cshtml
+++ b/Pages/ProductCategory/add.cshtml
@@ -24,8 +24,14 @@
     <br />
 </div>
 
+<p style="float:right; margin-right:25px; top:50px;">
+    <a asp-page="ProductCategory/index">Category List</a>
+</p>
+
+
 <h4 style="text-decoration:underline;">Create Product Category</h4>
-<a style="float:right; margin-right:25px;" asp-page="ProductCategory/index">Back to List</a>
+
+
 <hr />
 <div class="row" style="margin: 0 auto; width:80%">
     <div class="col-md-4">
