--- a/Pages/ProductCategory/Index.cshtml
+++ b/Pages/ProductCategory/Index.cshtml
@@ -35,6 +35,13 @@
 <p>
     <a asp-page="/ProductCategory/add"> New Category</a>
 </p>
+<div>
+ @if (TempData["custdetails"] != null) {
+
+ <p>@TempData["custdetails"]</p>
+
+ }
+</div>
 <table class="table table-stripped">
     <thead>
         <tr>
@@ -47,12 +54,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.ProductCategory[0].CategoryDescription)
             </th>
-            <th></th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model.ProductCategory) {
         <tr>
+           <td>
+                @Html.DisplayFor(modelItem => item.CategoryId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CategoryName)
             </td>
@@ -60,7 +70,7 @@
                 @Html.DisplayFor(modelItem => item.CategoryDescription)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.CategoryId">Edit</a> |
+                <a asp-page="./Update" asp-route-id="@item.CategoryId">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.CategoryId">Details</a> |
                 <a asp-page="./Delete" asp-route-id="@item.CategoryId">Delete</a>
             </td>
