--- a/Pages/ProductCategory/delete.cshtml
+++ b/Pages/ProductCategory/delete.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model web_api.Pages.ProductCategory.deleteModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
     Layout = null;
@@ -17,31 +18,44 @@
     <link rel="stylesheet" href="~/lib/bootstrap.min.css" />
 </environment>
 
-<body>
+<body style="margin: 0 auto; width:95%">
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ProductCategory</h4>
+    <br/>
+</div>
+<div style="margin:0 auto; width:80%">
+
+<h5>Are you sure you want to delete this catetory : @Html.DisplayFor(model => model.ProductCategory.CategoryName) ?</h5>
+
+ <a style="float:right; margin-right:30px; top:50px;" asp-page="./Index">Category List</a>
+
+    <h4>Product Category Details</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
+       <dt class="col-sm-3">
+            @Html.DisplayNameFor(model => model.ProductCategory.CategoryId)
+        </dt>
+        <dd class="col-sm-9">
+            @Html.DisplayFor(model => model.ProductCategory.CategoryId)
+        </dd>
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.ProductCategory.CategoryName)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.ProductCategory.CategoryName)
         </dd>
-        <dt class="col-sm-2">
+        <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.ProductCategory.CategoryDescription)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.ProductCategory.CategoryDescription)
         </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="ProductCategory.CategoryId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+       
     </form>
 </div>
 </body>
